Some small bug fixes: - new_parser : fixed bug where "then" one-expr blocks would not decrease the scope depth of the program after closing. - tokenizer : added "ref" keyword highlighting. - FILES/EXAMPLES : added new Tic Tac Toe working example, refactored benchmark test for FizzBuzz - webpage: fixed overflow issues on the custom console.

--- a/STYLES/console-style.css
+++ b/STYLES/console-style.css
@@ -25,6 +25,7 @@
 #console-log {
     background: inherit;
     color: var(--comment-col);
+    height: 100%;
     flex-grow: 1;
     padding-inline: .5rem;
     padding-block: .25rem;
